--- a/css/sand.css
+++ b/css/sand.css
@@ -1,6 +1,9 @@
 :root{
   --row-columns:10;
 }
+body{
+  background: #222;
+}
 .container{
   display: grid;
   place-items:center;
@@ -33,17 +36,22 @@ button:hover{
   border:4px solid #999;
 }
 .cell{
-  /* border:1px solid #999; */
+  /* border:1px solid lightgray; */
 }
 .wallIn{
   background:#555;
-  border:1px solid #999;
+  /* border:1px solid #999; */
 }
 .sandIn{
  background: rgb(226, 190, 111);
- border:1px solid rgb(252, 221, 155);
+ box-shadow: 1px 2px 0px 0px rgba(252,221,155,0.75);
+ -webkit-box-shadow: 1px 2px 0px 0px rgba(252,221,155,0.75);
+ -moz-box-shadow: 1px 2px 0px 0px rgba(252,221,155,0.75);
+
+
+ /* border:1px solid rgb(252, 221, 155) ; */
 }
 .waterIn{
   background: rgb(155, 149, 238);
-  border:1px solid rgb(220, 213, 240);
+  /* border:1px solid rgb(220, 213, 240); */
 }
