--- a/css/sand.css
+++ b/css/sand.css
@@ -31,8 +31,8 @@ button:hover{
   display:grid;
   grid-template-columns:repeat(var(--row-columns),1fr);
   grid-template-rows:repeat(var(--row-columns),1fr);
-  height:350px;
-  width:350px;
+  height:80vh;
+  width:90%;
   border:4px solid #999;
 }
 .cell{
@@ -43,6 +43,7 @@ button:hover{
   /* border:1px solid #999; */
 }
 .sandIn{
+  /* border-radius:20%; */
  background: rgb(226, 190, 111);
  box-shadow: 1px 2px 0px 0px rgba(252,221,155,0.75);
  -webkit-box-shadow: 1px 2px 0px 0px rgba(252,221,155,0.75);
