--- a/css/sand.css
+++ b/css/sand.css
@@ -31,8 +31,8 @@ button:hover{
   display:grid;
   grid-template-columns:repeat(var(--row-columns),1fr);
   grid-template-rows:repeat(var(--row-columns),1fr);
-  height:80vh;
-  width:90%;
+  height:500px;
+  width:500px;
   border:4px solid #999;
 }
 .cell{
